<resources>
    <string name="app_name">Dressing</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--LoginMainFragment-->
    <!--하단에 밑줄 http://stackoverflow.com/questions/2394935/can-i-underline-text-in-an-android-layout-->
    <string name="fragment_login_text2"><u>로그인</u></string>
    <string name="fragment_login_test1">이미 회원이신가요?</string>

    <!--SignInFragment-->
    <string name="fragment_signin_prompt_email">Email</string>
    <string name="fragment_signin_prompt_password">Password</string>
    <string name="fragment_signin_action_sign_in_short">Sign in</string>
    <string name="fragment_signin_findpassword_text">비밀번호를 잊으셨나요?</string>
    <string name="fragment_signin_loginbtn_text">로그인</string>
    <string name="fragment_signin_signupbtn_text">회원가입</string>
    <!--SingUpFragment-->
    <string name="fragment_signup_headline">당신이 오길 기다렸어요 :)</string>
    <!--MainActivity-->
    <string name="title_activity_main">MainActivity</string>
    <string name="view_tabbar_bottom_item_codi_text">코디 추천</string>
    <string name="view_tabbar_bottom_item_search_product_text">상품검색</string>
    <string name="view_tabbar_bottom_item_favorite_text">찜하기</string>
    <string name="view_tabbar_bottom_item_fitting_text">피팅하기</string>
    <string name="view_tabbar_bottom_item_location_text">위치설정</string>

    <string name="fragment_recommend_text">코디추천</string>
    <string name="fragment_product_total_text">전체</string>
    <string name="fragment_product_brand_text">브랜드</string>
    <string name="fragment_product_color_text">컬러</string>
    <string name="fragment_product_price_text">가격</string>
    <string name="fragment_favorite_codi_text">찜한코디</string>
    <string name="fragment_favorite_product_text">찜한상품</string>
    <string name="fragment_fitting_text">피팅리스트</string>
    <string name="fragment_location_text">위치설정</string>

    <!--SettingActivity-->
    <string name="activity_setting_title_text">환경설정</string>

    <!--StyleActivity-->
    <string name="activity_style_title_text">스타일분석</string>
    <string name="fragment_style_estimation_text">스타일평가</string>
    <string name="fragment_style_modify_text">평가수정</string>
    <string name="fragment_style_taste_text">취향분석</string>

    <!--CodiModelView-->
    <string name="foreseescore">예상평점</string>
    <string name="estimationScore">내평점</string>

    <!--bottom Sheet-->
    <string name="bottom_sheet_title">상품검색</string>
    <string name="bottom_sheet_category">카테고리 선택</string>
    <string name="bottom_sheet_sub_category">세부 카테고리 선택</string>
    <string name="bottom_sheet_sub_category_hint_text">카테고리를 선택해주세요 : )</string>
    <string name="bottom_sheet_search">검색</string>
    <string name="fitting_text">피팅하기</string>
    <string name="favorite_delete_text">찜 해제</string>

    <!--Location-->
    <string name="activity_location_title_text">매장위치</string>

    <!--제품 색상 검색-->
    <string-array translatable="false" name="default_color_choice_values">
        <item>#ff0000</item>
        <item>#000000</item>
        <item>#1565c0</item>
        <item>#6d4c41</item>
        <item>#757575</item>
        <item>#558b2f</item>
        <item>#263238</item>
        <item>#ef6c00</item>
        <item>#ffffff</item>
        <item>#ffca28</item>
    </string-array>


    <string name="facebook_app_id">1649184622014473</string>

</resources>
