<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/bottomsheet_view_layout">

        <com.dressing.dressingproject.ui.widget.NotoTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@color/main_blue"
            android:gravity="center_horizontal"
            android:textSize="@dimen/bottom_sheet_item_title_text_size"
            android:textColor="@android:color/white"
            android:text="@string/bottom_sheet_title"/>

        <com.dressing.dressingproject.ui.widget.NotoTextView
            style="@style/bottom_sheet_style"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main_blue"
            android:text="@string/bottom_sheet_category"
            android:textSize="@dimen/bottom_sheet_item_text_size"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:id="@+id/bottomsheet_view_category_arrow_left"
                android:src="@drawable/ic_arrow_left_black_48dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:id="@+id/bottomsheet_view_category_arrow_right"
                android:src="@drawable/ic_arrow_right_black_48dp"/>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:clipToPadding="false"
                android:id="@+id/bottomsheet_view_category_recycler"
                />
        </FrameLayout>

        <com.dressing.dressingproject.ui.widget.NotoTextView
            style="@style/bottom_sheet_style"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_sheet_sub_category"
            android:textColor="@color/main_blue"
            android:textSize="@dimen/bottom_sheet_item_text_size"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/bottomsheet_view_sub_category_textview"
                android:text="@string/bottom_sheet_sub_category_hint_text"
                android:textSize="@dimen/bottom_sheet_sub_category_hint_size"
                android:textColor="@android:color/black"/>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:clipToPadding="false"
                android:id="@+id/bottomsheet_view_sub_category_recycler"
                />

        </FrameLayout>

        <Button
            android:layout_width="222dp"
            android:layout_height="35dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="19dp"
            android:enabled="false"
            android:layout_gravity="center_horizontal"
            android:id="@+id/bottomsheet_view_search_btn"
            android:textColor="@android:color/white"
            android:background="@color/main_blue"
            android:text="@string/bottom_sheet_search"
            android:textSize="@dimen/bottom_sheet_search_size"/>

    </LinearLayout>


</LinearLayout>